# trading-bot

./: .env.example  .gitignore  Cargo.toml  NX.md  README.md  eslint.config.mjs  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
.github/: renovate.json
.github/instructions/: copilot-instructions.md  nestjs.instructions.md
.github/workflows/: ci-pr.yml  ci-push.yml  ci.yml
apps/api-gateway/: .env.e2e  .env.example  eslint.config.mjs  project.json  tsconfig.app.json  tsconfig.json  vitest.config.mts  webpack.config.js
apps/api-gateway/src/: app-error-response.dto.ts  app-setup.spec.ts  app-setup.ts  app.module.ts  cors.config.spec.ts  cors.config.ts  env.validation.ts  main.ts
apps/dashboard/: .env.e2e  .env.example  eslint.config.mjs  project.json  tsconfig.json  vite.config.mts
apps/dashboard/src/: main.tsx  styles.css  theme.spec.tsx  theme.tsx
apps/data-ingestion/: .env.e2e  .env.example  .env.test-integration  Cargo.toml  build.rs  project.json
apps/data-ingestion/migrations/: 20260512000000_create_market_data_bars.sql
apps/data-ingestion/src/: config.rs  error.rs  lib.rs  main.rs
apps/data-ingestion/src/consumers/: instrument_consumer.rs  market_data_consumer.rs  mod.rs  tests.rs
apps/data-ingestion/src/domain/: market_data_bar.rs  mod.rs
apps/data-ingestion/src/grpc/: data_ingestion_service.rs  mod.rs  tests.rs
apps/data-ingestion/src/repository/: market_data_repository.rs  mod.rs  pg_market_data_repository.rs  tests.rs
apps/data-ingestion/src/subscription/: external_facade_grpc_client.rs  gateway.rs  mod.rs  tests.rs
apps/data-ingestion/tests/: integration.rs
apps/data-ingestion/tests/repository/: mod.rs
apps/execution-engine/: .env.e2e  .env.example  .env.test-integration  eslint.config.mjs  jest.config.cts  jest.integration.config.ts  prisma.config.ts  project.json  tsconfig.app.json  tsconfig.spec.json  vitest.config.mts  vitest.integration.config.mts  webpack.config.js
apps/execution-engine/prisma/: schema.prisma
apps/execution-engine/src/: env.validation.ts  main.ts
apps/external-api-facade/: .env.e2e  .env.example  eslint.config.mjs  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vitest.config.mts  webpack.config.js
apps/external-api-facade/src/: app.module.ts  env.validation.ts  main.ts
apps/feature-engineering/: .env.e2e  .env.example  Cargo.toml  project.json
apps/feature-engineering/src/: config.rs  consumer.rs  error.rs  lib.rs  main.rs  metrics.rs  service.rs
apps/feature-engineering/src/domain/: interval.rs  market_data.rs  mod.rs
apps/feature-engineering/src/indicators/: core.rs  mod.rs
apps/feature-engineering/src/publisher/: mod.rs
apps/feature-engineering/src/warmup/: mod.rs
apps/portfolio-manager/: .env.e2e  .env.example  .env.test-integration  eslint.config.mjs  jest.config.ts  jest.integration.config.ts  prisma.config.ts  project.json  tsconfig.app.json  tsconfig.spec.json  vitest.config.mts  vitest.integration.config.mts  webpack.config.js
apps/portfolio-manager/prisma/: schema.prisma  seed.ts
apps/portfolio-manager/src/: app.module.ts  env.validation.ts  main.ts
apps/prediction-engine/: .env.e2e  .env.example  project.json  pyproject.toml
apps/prediction-engine/src/prediction_engine/: __init__.py  cache.py  config.py  consumer.py  dlq.py  grpc_server.py  main.py  metrics.py  model.py  publisher.py  service.py
apps/prediction-engine/tests/: test_cache.py  test_config.py  test_consumer.py  test_grpc_server.py  test_model.py  test_service.py
apps/trading-bot-e2e/: .env.e2e  README.md  eslint.config.mjs  playwright.config.ts  project.json  tsconfig.json  vitest.config.mts
docs/architecture/: ARCHITECTURE.md
docs/architecture/c4/: workspace.dsl
docs/c4/: workspace.dsl
docs/implementation/: MVP_ITERATION_PLAN.md
docs/operations/: reliability-runbooks.md
infra/: .env.e2e  .env.example  .env.test-integration  README.md  docker-compose.base.yml  docker-compose.test.yml  docker-compose.yml  project.json
infra/redpanda/: topics.txt
infra/scripts/: bootstrap-topics.sh
libs/common/: README.md  eslint.config.mjs  project.json  tsconfig.lib.json  tsconfig.spec.json  vitest.config.mts
libs/common-python/: project.json  pyproject.toml
libs/common-python/src/common/: instrument_pb2.py  instrument_pb2_grpc.py  portfolio_pb2.py  portfolio_pb2_grpc.py  signal_pb2.py  signal_pb2_grpc.py
libs/common-python/src/events/: events_pb2.py  events_pb2_grpc.py  features_pb2.py  features_pb2_grpc.py  market_pb2.py  market_pb2_grpc.py
libs/common-python/src/services/: data_ingestion_pb2.py  data_ingestion_pb2_grpc.py  execution_engine_pb2.py  execution_engine_pb2_grpc.py  external_api_facade_pb2.py  external_api_facade_pb2_grpc.py  portfolio_manager_pb2.py  portfolio_manager_pb2_grpc.py  prediction_engine_pb2.py  prediction_engine_pb2_grpc.py
libs/common-python/src/tradingbot_common/: __init__.py  kafka.py  protobuf.py
libs/common-python/tests/: test_kafka.py  test_proto_smoke.py
libs/common-rs/: Cargo.toml  build.rs  project.json
libs/common-rs/src/: lib.rs  proto.rs
libs/common-rs/src/kafka/: consumer.rs  dlq.rs  keys.rs  metadata.rs  mod.rs  topics.rs
libs/common/src/: index.ts
libs/testing/: eslint.config.mjs  project.json  tsconfig.lib.json  vitest.config.mts
libs/testing/src/: index.ts
proto/: portfolio.proto  signal.proto
proto/common/: instrument.proto  portfolio.proto  signal.proto
proto/events/: events.proto  features.proto  market.proto
proto/services/: data_ingestion.proto  execution_engine.proto  external_api_facade.proto  portfolio_manager.proto  prediction_engine.proto
scripts/: generate-proto-barrel.mjs  generate_python_proto.py  structurizr-lite.sh
services/api-gateway/: eslint.config.mjs  package-lock.json  package.json
services/api-gateway/src/: app-setup.ts  app.module.ts  env.validation.ts  main.ts
services/api-gateway/test/: app.e2e-spec.ts
services/risk-and-portfolio-manager/: nest-cli.json  package-lock.json  package.json
tools/webpack/: configure-swc-loader.js
(+302 files in other folders)
