[package]
name = "data-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "data-ingestion"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
prometheus.workspace = true

# Build-time gRPC code generation
tonic-build = { version = "0.12" }

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true

[build-dependencies]
# tonic-build reads .proto files and generates Rust structs + gRPC traits at compile time
tonic-build = { version = "0.12" }
prost-build = { version = "0.13" }
