[project]
name = "prediction-engine"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiokafka>=0.12.0,<0.13",
  "grpcio>=1.80.0,<2",
  "prometheus-client>=0.23.0,<0.24",
  "python-dotenv>=1.2.0,<2",
  "redis>=7.0.0,<8",
  "trading-common-python",
]

[dependency-groups]
dev = [
  "mypy>=1.19.0,<2",
  "pytest>=9.0.0,<10",
  "pytest-asyncio>=1.3.0,<2",
  "ruff>=0.14.0,<0.15",
]

[tool.uv.sources]
trading-common-python = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_engine"]
