[project]
name = "prediction-engine"
version = "0.1.0"
requires-python = "==3.12.13"
dependencies = [
  "aiokafka==0.14.0",
  "grpcio==1.80.0",
  "prometheus-client==0.23.1",
  "python-dotenv==1.2.2",
  "redis==7.4.0",
  "trading-common-python",
]

[dependency-groups]
dev = [
  "mypy==1.20.2",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.14",
]

[tool.uv.sources]
trading-common-python = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_engine"]
