[project]
name = "trading-common-python"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "grpcio>=1.80.0,<2",
  "protobuf>=6.33.0,<7",
]

[dependency-groups]
dev = [
  "grpcio-tools>=1.80.0,<2",
  "mypy>=1.19.0,<2",
  "pytest>=9.0.0,<10",
  "ruff>=0.15.14,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/tradingbot_common",
  "src/common",
  "src/events",
  "src/services",
]
