[project]
name = "trading-common-python"
version = "0.1.0"
requires-python = "==3.14.5"
dependencies = [
  "grpcio==1.80.0",
  "protobuf==6.33.6",
]

[dependency-groups]
dev = [
  "grpcio-tools==1.80.0",
  "mypy==1.20.2",
  "pytest==9.0.3",
  "ruff==0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/tradingbot_common",
  "src/common",
  "src/events",
  "src/services",
]
